--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
         <input id="input" type="range" min="0" max="4" value="0" step="1" />
         <div class="price-section">
+          <span>$</span>
           <div id="output"></div>
           <p>/ month</p>
         </div>
@@ -58,8 +59,7 @@
               <span class="switch-background"></span>
               <span class="switch-button"></span>
             </span>
-            <label>Yearly Billing</label>
-            <span class="discount-rate">-25%</span>
+            <label>Yearly Billing</label><span class="discount-rate">-25%</span>
           </fieldset>
         </form>
 
